# QuestiMakinator

./: .gitignore  CMakeLists.txt  README.md  launch.sh  licenses.py  resources.rc  setup.sh
examples/: ModUsed.md
include/files/: basic_header.h
include/gui/display/: Image.h  button_slow_tooltip.h  menu.h  textfield_selection.h  window.h
include/integration/: kubejs.h  model.h
include/logger/: logger.h
include/parser/: parser.h  raw.h
include/quests/: chapter.h  chapter_group.h  quest.h  reward.h  reward_table.h  uuid.h
src/: main.cpp  main.py  main2.cpp
src/gui/display/: Image.cpp  button_slow_tooltip.cpp  textfield_selection.cpp  window.cpp
src/integration/: kubejs.cpp  model.cpp
src/logger/: logger.cpp
src/quests/: chapter.cpp  chapter_group.cpp  quest.cpp  reward.cpp
